fixed some issues discovered in merge as well as add dark mode elements to playgame

--- a/src/main/resources/static/css/playgame.css
+++ b/src/main/resources/static/css/playgame.css
@@ -32,6 +32,18 @@
     margin: 0 auto;
 }
 
+body.dark-theme .card-placeholder-left {
+    background-color: rgba(53, 103, 220, 1);
+    border: 2px dashed #383838;
+    color: rgb(221, 221, 221);
+}
+
+body.dark-theme .card-placeholder-right {
+    background-color: rgba(220, 53, 69, 1);
+    border: 2px dashed #383838;
+    color: rgb(221, 221, 221);
+}
+
 .card-placeholder-container {
     text-align: center;
     justify-content: center;
@@ -134,6 +146,10 @@ form button {
     transition: all 0.2s ease-in-out;
 }
 
+body.dark-theme .main-button-success {
+    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
+}
+
 .main-button-success:hover {
     transform: translateY(-2px);
     opacity: 0.95;
@@ -152,6 +168,10 @@ form button {
     transition: all 0.2s ease-in-out;
 }
 
+body.dark-theme .main-button-neutral {
+    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
+}
+
 .main-button-neutral:hover {
     transform: translateY(-2px);
     opacity: 0.95;
@@ -168,6 +188,10 @@ form button {
     font-weight: bold;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.2s ease-in-out;
+}
+
+body.dark-theme .main-button-warning {
+    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
 }
 
 .main-button-warning:hover {
@@ -191,6 +215,10 @@ form button {
     text-align: center;
 }
 
+body.dark-theme .reveal {
+    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
+}
+
 .score-reveal-container {
     display: flex;
     flex-direction: column;
@@ -200,11 +228,15 @@ form button {
 
 .cpu-stat-container {
     background: #79c9d9;
-    background: linear-gradient(148deg, rgba(121, 201, 217, 1) 0%, rgba(77, 72, 133, 1) 64%, rgba(184, 57, 57, 1) 94%);
+    background: linear-gradient(148deg, rgb(174, 216, 224) 0%, rgb(128, 122, 196) 64%, rgb(194, 91, 91) 94%);
     color: white;
     border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px 10px;
     width: 270px;
     text-align: center;
+}
+
+body.dark-theme .cpu-stat-container {
+    background: linear-gradient(148deg, rgb(53, 145, 220) 0%, rgb(58, 48, 92) 64%, rgb(148, 45, 93) 94%);
 }
